--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -1,78 +1,76 @@
 # Sample workflow for building and deploying an Astro site to GitHub Pages
-#
-# To get started with Astro see: https://docs.astro.build/en/getting-started/
-#
 name: Deploy Astro site to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 env:
-  BUILD_PATH: "." # default value when not using subfolders
-  # BUILD_PATH: subfolder
+  BUILD_PATH: "." # Default build path
 
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Detect package manager
         id: detect-package-manager
         run: |
           if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-            echo "lockfile=yarn.lock" >> $GITHUB_OUTPUT
-            exit 0
+            echo "manager=yarn" >> $GITHUB_ENV
+            echo "install_command=install --frozen-lockfile" >> $GITHUB_ENV
+            echo "runner=yarn" >> $GITHUB_ENV
+            echo "lockfile=yarn.lock" >> $GITHUB_ENV
           elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-            echo "lockfile=package-lock.json" >> $GITHUB_OUTPUT
-            exit 0
+            echo "manager=npm" >> $GITHUB_ENV
+            echo "install_command=ci" >> $GITHUB_ENV
+            echo "runner=npx --yes" >> $GITHUB_ENV
+            echo "lockfile=package-lock.json" >> $GITHUB_ENV
           else
-            echo "Unable to determine package manager"
+            echo "Unable to determine package manager. Exiting."
             exit 1
           fi
-      - name: Setup Node
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
-          cache-dependency-path: ${{ env.BUILD_PATH }}/${{ steps.detect-package-manager.outputs.lockfile }}
-      - name: Setup Pages
+          cache: ${{ env.manager }}
+          cache-dependency-path: ${{ env.BUILD_PATH }}/${{ env.lockfile }}
+
+      - name: Setup GitHub Pages
         id: pages
         uses: actions/configure-pages@v5
+
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        run: ${{ env.manager }} ${{ env.install_command }}
         working-directory: ${{ env.BUILD_PATH }}
+
+      - name: Verify Astro installation
+        run: npm list astro || npm install astro@latest
+        working-directory: ${{ env.BUILD_PATH }}
+
       - name: Build with Astro
         run: |
-          ${{ steps.detect-package-manager.outputs.runner }} astro build \
+          ${{ env.runner }} astro build \
             --site "${{ steps.pages.outputs.origin }}" \
             --base "${{ steps.pages.outputs.base_path }}"
         working-directory: ${{ env.BUILD_PATH }}
-      - name: Upload artifact
+
+      - name: Upload build artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ${{ env.BUILD_PATH }}/dist
